--- a/src/group/GroupProfile.css
+++ b/src/group/GroupProfile.css
@@ -55,8 +55,4 @@
   .group-name {
     font-size: 1.2rem;
   }
-
-  .group-activity {
-    display: none;
-  }
 }
